--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,11 @@
 @import url("../blocks/header/__link/header__link.css");
 @import url("../blocks/header/__link-item/header__link-item.css");
 @import url("../blocks/header/__menu/header__menu.css");
+@import url("../blocks/header/__menu-sandwich/header__menu-sandwich.css");
+@import url("../blocks/header/__menu-toggle/header__menu-toggle.css");
+@import url("../blocks/header/__menu-btn/header__menu-btn.css");
+@import url("../blocks/header/__btn-logo/header__btn-logo.css");
+@import url("../blocks/header/__links-sandwich/header__links-sandwich.css");
 
 /* Блок /title/ */
 @import url("../blocks/title/title.css");
