--- a/blocks/places/__img/places__img.css
+++ b/blocks/places/__img/places__img.css
@@ -1,13 +1,19 @@
 .places__img {
   width: 100%;
-  height: 533px;
+  height: calc(100vw / 2 / 1.2);
   object-fit: cover;
   object-position: center;
 }
 
+@media (max-width: 1124px) {
+  .places__img {
+    height: 100%;
+  }
+}
+
 @media (max-width: 765px) {
   .places__img {
-    height: 450px;
+    height: calc(100vw / 2);
   }
 }
 
